fix: remove z-index of focused input (#1512)

--- a/packages/forma-36-react-components/src/components/TextInput/TextInput.css
+++ b/packages/forma-36-react-components/src/components/TextInput/TextInput.css
@@ -43,10 +43,6 @@
   }
 }
 
-.TextInput__input:focus {
-  z-index: var(--z-index-default);
-}
-
 .TextInput--small {
   width: var(--input-width-small);
 }
